fix: wrong positionning for top bar

--- a/src/styles/breadcrumb.styl
+++ b/src/styles/breadcrumb.styl
@@ -42,7 +42,7 @@
         margin   0
         position fixed
         top      0
-        left     $coz-bar-size
+        left     2.5em
         right    0
         z-index  $nav-index
 
