--- a/src/styles/topbar.styl
+++ b/src/styles/topbar.styl
@@ -14,7 +14,7 @@ $coz-bar-size = 48px
         margin   0
         position fixed
         top      0
-        left     $coz-bar-size
+        left     2.5em
         right    0
         z-index  $nav-index
         height   $coz-bar-size
